# oscar-analisys

./: .gitignore  README.md  app.py  ceremony_base.csv  ceremony_list.csv  cerimony_list.csv  main.ipynb  oscar_winners_enriched.csv  pyproject.toml  requirements.txt  winners_base.csv
extractor/: test_wikipedia_extractor.py  wikipedia_extractor.py
extractor/wikipedia/: test_wikipedia_extractor.py
oscardata/: __init__.py  __main__.py  ceremony_base.csv  main.py  omdb.py  wikipedia.py
oscardata/wikipedia/: __init__.py  test_wikipedia_extractor.py
